增加debug log的内容

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
       <ul class="dropdown-menu" role="menu">
       </ul>
     </div>
-
+    <div>
+      <ul id="debug-log">
+      </ul>
+    </div>
   </body>
 </html>
